# dc-lang

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
benchmarks/: calc.c  calc.dc  calc.java  matrix_mul.c  matrix_mul.dc  matrix_mul.java  prime.c  prime.dc  prime.java
scripts/: gen_matrix.py
src/: assert.hpp  code_gen.cpp  code_gen.hpp  cxx_extensions.hpp  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  utilities.cpp  utilities.hpp
